[tool.poetry]
name = "app"
version = "0.1.0"
description = "A simple app."
authors = ["Tai Lucas <tglucas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
app = "app.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
simplejson = "^3.19.2"
python-dateutil = "^2.8.2"
tailucas-pylib = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
