[project]
name = "app"
version = "0.1.0"
description = "Simple Application"
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    { name = "Tai Lucas", email = "tglucas@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "tailucas-pylib>=0.5.2",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""

[project.scripts]
aws_configure = "tailucas_pylib.tools.aws_configure:main"
config_interpol = "tailucas_pylib.tools.config_interpol:main"
cred_tool = "tailucas_pylib.tools.cred_tool:main"
yaml_interpol = "tailucas_pylib.tools.yaml_interpol:main"
